# pactum

./: .env  .gitignore  Awesome — let’s make Pactum V0 actually .rs  Cargo.toml  Excelente. Do jeito que você fechou V0.md  Hell yes.md  Here’s a canonical JSON + hashing + sign.md  Perfeito.md  README.md  SPECIFICATION.md  Sweet — here’s Case6 (seq skip) in the e.rs  This is a big milestone: you now have (1.md  YES — here’s the exact, copy-pasteable C.rs  create_github_repo.py  envelope.json  expected_outputs.json  expected_receipt.json  expected_state1.json  expected_trace.json  pact.json  state0.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  README.md  USE_CASES.md
src/: canon.rs  hash.rs  lib.rs  pactum.rs
tests/: golden.rs  golden_case10.rs  golden_case11.rs  golden_case2.rs  golden_case3.rs  golden_case4.rs  golden_case5.rs  golden_case6.rs  golden_case7.rs  golden_case8.rs  golden_case9.rs
tests/fixtures/: envelope.json  expected_outputs.json  expected_receipt.json  expected_state1.json  expected_trace.json  pact.json  state0.json
tests/fixtures_case10/: envelope.json  expected_error.txt  state0.json
tests/fixtures_case11/: envelope.json  pact.json
tests/fixtures_case2/: envelope.json  expected_receipt.json  expected_state1.json  expected_trace.json  pact.json  state0.json
tests/fixtures_case3/: envelope.json  expected_receipt.json  expected_state1.json  expected_trace.json  pact.json  state0.json
tests/fixtures_case4/: envelope.json  state0.json
tests/fixtures_case5/: envelope.json  (+2 more)
ts/: package-lock.json  package.json  tsconfig.json
(+18 files in other folders)
